...
          controller: _tabController,
          indicatorColor: AppTheme.primaryAmber,
          labelColor: AppTheme.primaryAmber,
          unselectedLabelColor: AppTheme.textSecondary,
          tabs: const <Widget>[
            Tab(text: 'Maxes & Percentages'),
            Tab(text: 'Ratio Balance'),
          ],
        ),
      ),
      body: SafeArea(
        child: TabBarView(
          controller: _tabController,
...
